# norimberga

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  conftest.py  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.claude/: settings.json
.github/workflows/: ci.yml
apps/account/: urls.py  views.py
apps/account/forms/: user.py
apps/account/tests/: factories.py  test_forms_user.py  test_views_authentication.py
apps/account/views/: __init__.py  user_login_view.py  user_logout_view.py  user_registration_view.py
apps/city/: admin.py  apps.py  constants.py  mixins.py  models.py  urls.py  views.py
apps/city/context_processors/: savegame.py
apps/city/fields/: building.py
apps/city/fixtures/: building_types.json  buildings.json  terrains.json
apps/city/forms/: savegame.py  tile.py
apps/city/managers/: savegame.py  tile.py
apps/city/migrations/: 0001_initial.py  0002_alter_tile_unique_together.py  0003_tile_building.py  0004_tile_tile_type.py  0005_alter_building_options_alter_savegame_options_and_more.py  0006_alter_tiletype_probability.py  0007_tiletype_map_color.py  0008_alter_tiletype_map_color.py  0009_rename_map_color_tiletype_color_class.py  0010_building_is_wall.py  0011_rename_tiletype_terrain_alter_terrain_options_and_more.py  0012_building_allowed_terrains.py  0013_remove_building_is_city_remove_building_is_wall_and_more.py  0014_savegame_silver.py  0015_building_building_costs.py  0016_remove_savegame_silver_savegame_coin.py  0017_remove_savegame_coin_savegame_coins.py  0018_savegame_population.py  0019_building_maintenance_costs_building_taxes.py  0020_alter_savegame_coins.py  0021_savegame_current_year.py  0022_alter_building_behaviour_type.py  0023_savegame_unrest.py  0024_alter_savegame_unrest.py  0025_remove_building_allowed_terrains_and_more.py  0026_buildingtype_is_house_buildingtype_is_wall_and_more.py  0027_building_level.py  0028_building_housing_space_alter_building_building_costs_and_more.py  0029_alter_building_housing_space.py  0030_savegame_is_active.py  0031_remove_buildingtype_behaviour_type_and_more.py  0032_buildingtype_is_unique.py  0033_savegame_is_enclosed.py  0034_terrain_is_water.py  0035_alter_terrain_color_class.py  0036_split_water_terrain.py  0037_savegame_user.py  0038_set_default_user_for_savegames.py  0039_alter_savegame_user.py  0040_alter_savegame_coins.py  (+15 more)
apps/city/models/: __init__.py  building.py  building_type.py  terrain.py  tile.py
apps/city/selectors/: savegame.py
apps/city/services/: map_generation.py  prestige.py
apps/city/templatetags/: tile_tags.py
apps/city/tests/: conftest.py  factories.py  fixtures.py  test_collapse_in_mines.py  test_forms_user.py  test_harvest_dispute.py  test_mixins.py  test_models.py  test_templatetags_tile_tags.py  test_views.py  test_views_authentication.py  test_views_savegame.py  test_wandering_preacher.py
apps/city/views/: __init__.py  balance_view.py  city_map_view.py  city_messages_view.py  defenses_view.py  landing_page_view.py  navbar_values_view.py  prestige_view.py  tile_build_view.py  tile_demolish_view.py  tile_wall_repair_view.py  wall_repair_all_view.py
apps/coat_of_arms/: apps.py
apps/coat_of_arms/services/: generator.py
apps/coat_of_arms/tests/: factories.py  test_services_generator.py
apps/config/: asgi.py  settings.py  urls.py  wsgi.py
apps/core/: apps.py
apps/core/templates/: base.html
apps/core/templatetags/: core_filters.py
apps/core/tests/: test_core_filters.py
apps/edict/: admin.py  apps.py  models.py  selectors.py  urls.py  views.py
apps/edict/fixtures/: README.md  edicts.json
apps/edict/migrations/: 0001_initial.py  0002_alter_edictlog_savegame.py  0002_edict_required_milestone.py  0003_edict_required_milestone.py  0004_edict_cost_prestige_edict_required_prestige.py  0005_remove_edict_cost_prestige.py
apps/edict/models/: __init__.py  edict.py  edict_log.py
apps/edict/services/: edict_activation.py
apps/edict/tests/: factories.py  test_edict_activation_service.py  test_edict_prestige.py  test_models.py  test_selectors.py  test_views.py
apps/edict/views/: __init__.py  edict_activate_view.py  edict_list_view.py
apps/event/: admin.py  models.py  urls.py  views.py
apps/event/events/: choice.py
apps/event/managers/: event_notification.py
apps/event/migrations/: 0001_initial.py  0002_alter_eventnotification_options_and_more.py  0002_eventeffectfilter.py  0003_eventeffectfilter_value.py  0004_alter_eventeffectfilter_value.py  0005_alter_event_probability.py  0006_rename_effect_event_effects.py  0007_remove_eventeffect_content_type_and_more.py
apps/event/models/: __init__.py  event_choice.py
apps/event/services/: event.py  notification_creation.py  selection.py  storage.py
apps/event/tests/: conftest.py  factories.py  test_admin.py  test_choice.py  test_event_choice.py  test_notification_creation_service.py  test_notification_model.py  test_notification_views.py  test_selection.py  test_storage.py  test_views.py
apps/event/views/: __init__.py  event_choice_select_view.py  notification_acknowledge_view.py  notification_board_view.py  pending_events_view.py
apps/milestone/: admin.py  apps.py  models.py  urls.py  views.py
apps/milestone/conditions/: abstract.py  coins.py  population.py  prestige.py  year.py
apps/milestone/fixtures/: README.md  milestone_conditions.json  milestones.json
apps/milestone/migrations/: 0001_initial.py  0002_alter_milestonelog_options_milestone_and_more.py  0003_alter_milestonelog_savegame.py
apps/milestone/milestones/: abstract.py  grow_city.py
apps/milestone/models/: __init__.py  milestone.py  milestone_condition.py  milestone_log.py
apps/milestone/selectors/: milestone.py
apps/round/: urls.py  views.py
apps/savegame/: admin.py  apps.py  models.py  urls.py  views.py
apps/thread/: models.py  urls.py  views.py
docs/contributing/: getting_started.md  idea_pool.md  setup.md
docs/patterns/: controller_layer.md  event_system.md  orm_structure.md  testing_strategy.md  ui_components.md
static/css/: input.css  map.css
(+305 files in other folders)
